--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "demo-routers",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/contrerasjf0/portfolio",
+  "homepage":"https://contrerasjf0.github.io/portfolio",
   "dependencies": {
     "antd": "^3.23.3",
     "firebase": "^6.6.1",
