--- a/package.json
+++ b/package.json
@@ -2,11 +2,9 @@
   "name": "demo-routers",
   "version": "0.1.0",
   "private": true,
-  "homepage":"https://contrerasjf0.github.io/portfolio",
   "dependencies": {
     "antd": "^3.23.3",
     "firebase": "^6.6.1",
-    "gh-pages": "^2.1.1",
     "moment": "^2.24.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
@@ -17,9 +15,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "yarn run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
